--- a/css/concerts.css
+++ b/css/concerts.css
@@ -5,26 +5,6 @@
     margin: 0;
 }
 
-.nav-bar{
-    color:lightgray;
-    background-color: black;
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 9999;
-    transition: all 300ms ease-in-out;
-}
-
-.nav-bar a{
-    text-decoration: none;
-    color: white;
-    font-size: 30px;
-    margin: 0 30px;
-}
-
 .concertsHeader {
     color: white;
     font-size: 35px;
@@ -51,6 +31,8 @@
     justify-content: center;
     flex-direction: column;
     align-items: center;
+    margin-top: 100px;
+    margin-bottom: 50px;
 }
 
 tr:hover {
@@ -59,7 +41,7 @@ tr:hover {
 
 .location, .date {
     text-align: center;
-    height: 50px;
+    height: 70px;
     width: 300px;
     display: flex;
     flex-flow: row;
@@ -73,9 +55,8 @@ tr:hover {
     color: white;
     height: 30px;
     font-size: 30px;
+    padding-top: 10px;
     padding-bottom: 10px;
-    text-decoration: underline;
-    text-decoration-color: black;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -87,5 +68,5 @@ tr:hover {
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    font-size: 25px;
 }
-
