--- a/css/albums.css
+++ b/css/albums.css
@@ -5,39 +5,11 @@
     margin: 0;
 }
 
-.albums-header{
-    margin-top: 5px;
-    margin-left: 10px;
-    color: white;
-    font-size: 35px;
-    display: flex;
-}
-
-.nav-bar {
-    color:lightgray;
-    background-color: black;
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 9999;
-    transition: all 300ms ease-in-out;
-}
-
-.nav-bar a {
-    text-decoration: none;
-    color: white;
-    font-size: 30px;
-    margin: 0 30px;
-}
-
 .albums{
-    margin-top: 10px;
+    margin: 200px 10px 0 10px;
     display: flex;
-    flex-flow: column;
-    justify-content: center;
+    flex-flow: row;
+    justify-content: space-between; 
     align-items: center;
     color: white;
 }
@@ -164,7 +136,6 @@ p{
 .media, .albums a:hover {
     text-decoration: underline;
 }
-
 
 
 
