--- a/css/style.css
+++ b/css/style.css
@@ -16,30 +16,7 @@
     color: black;
     font-size: 35px;
     display: flex;
-    top: 0;
-    left: 0;
+    position: absolute;
 }
-
-.nav-bar{
-    color:lightgray;
-    background-color: black;
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 9999;
-    transition: all 300ms ease-in-out;
-}
-
-.nav-bar a{
-    text-decoration: none;
-    color: white;
-    margin: 0 30px;
-    font-size: 40px;
-}
-
-
 
 
