--- a/css/nav.css
+++ b/css/nav.css
@@ -21,6 +21,14 @@
     padding: 10px 0;
 }
 
+.nav-bar a:hover {
+    color: red;
+}
+
+.navbar-clicked {
+    color: red;
+}
+
 .sticky {
     opacity: 0.7;
     margin: 0;
@@ -54,4 +62,8 @@
 
 .display-block {
     display: block;
+}
+
+.selected:active {
+    color: red;
 }
