--- a/css/albums.css
+++ b/css/albums.css
@@ -12,10 +12,11 @@ body{
 }
 
 .albums{
-    margin: 200px 10px 0 10px;
+    margin-top: 100px;
     color: white;
     display: flex;
-    justify-content: space-between;
+    flex-wrap: wrap;
+    justify-content: center;
     flex-direction: row;
     text-decoration: none;
 }
