--- a/Client/css/concerts.css
+++ b/Client/css/concerts.css
@@ -7,9 +7,8 @@
 
 .caption{
     font-size: 40px;
-    padding-bottom: 40px;
-    padding-top: 50px;
-    width: 300px;
+    margin-top: 70px;
+    margin-bottom: 20px;
     text-align: left;
     color: white;
     display: flex;
